<resources>
    <string name="app_name">NutriBox</string>
    <string name="hello_user">Hello, User</string>
    <string name="search_meals">Search meals</string>
    <string name="view_all">View All</string>
    <string name="trending_tiffins">Trending Tiffins</string>
    <string name="categories">Categories</string>
    <string name="consultants">Consultants</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="tag_line">Eat Fresh, Eat Healthy</string>
    <string name="sigin_with_email">SigIn with Email</string>
    <string name="signin_with_phone">SignIn with Phone</string>
    <string name="signup">Signup</string>
    <string name="or">OR</string>
    <string name="todo">TODO</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="sign_up_btn">SIGN UP</string>
    <string name="already_an_user_login">Already an User? Login</string>
    <string name="sign_in_btn">SIGN IN</string>
    <string name="not_yet_signup_register">Not yet Register? SignUp</string>
    <string name="food">Food</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_label">Forgot Password</string>
    <string name="password_instruction">Provide your account\'s email for which you want to reset your password!</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="example_tiffin">123, abc, Canada</string>
    <string name="ex_tiffin_title">#1</string>
    <string name="category_name">Category Name</string>
    <string name="consultant_name">Jade Smith</string>
    <string name="message">Message</string>
    <string name="full_meal">Full Meal</string>
    <string name="select_category">Select Category</string>
    <string name="customer">Customer</string>
    <string name="chef">Chef</string>
    <string name="consultant">Consultant</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="add_to_cart">Add</string>
    <string name="price">$</string>
    <string name="checkout">Checkout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tiffin_name">Tiffin Name</string>
    <string name="plan">Plan</string>
    <string name="_0_00">$0.00</string>
    <string name="delete">Delete</string>
    <string name="add_special_instructions_optional">Add special instructions (optional)</string>
    <string name="add_cart">Add to Cart</string>
    <string name="this_is_a_demo_transaction_no_real_money_will_be_charged">This is a demo transaction. No real money will be charged.</string>
    <string name="total_amount">Total Amount</string>
    <string name="pay_now">Pay Now</string>
    <string name="logout">Logout</string>
    <string name="term_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="my_orders">My orders</string>
    <string name="meeting_with_consultant">Meeting with consultant</string>
    <string name="personal_info">Personal Info</string>
    <string name="expand">Expand</string>
    <string name="example_fullname">Full Name: Ajay Dhillon</string>
    <string name="example_username">Username: ajay_dhillon</string>
    <string name="example_email">Email: ajay.sharma@example.com</string>
    <string name="more_info">More info</string>
    <string name="back">back</string>
    <string name="meeting_link_details">Meeting link will be sent to the email 12 hours before the meeting time. Contact the support for more inquires.</string>
    <string name="my_consultant_bookings">My Consultant Bookings</string>
</resources>