<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginEnd="8dp">

    <ImageView
        android:id="@+id/tiffinImage"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_margin="4dp"
        android:contentDescription="@string/todo"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/tiffin1" />

    <TextView
        android:id="@+id/tiffinName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/ex_tiffin_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewSubTitle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/example_tiffin"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/price" />

    <Button
        android:id="@+id/btnCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text = "@string/add_to_cart" />


</LinearLayout>