<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Screen.ChefRegistration">

    <!-- Chef Logo ImageView -->
    <ImageView
        android:id="@+id/chefLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/chef"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- CardView for registration form -->
    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintTop_toBottomOf="@id/chefLogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/skin_border"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="24dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textAlignment="center"
                    android:textColor="@color/skin"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/signUp_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/skin_border"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="8dp"
                    android:hint="@string/enter_name"
                    android:padding="8dp"
                    android:textColor="@color/purple" />

                <EditText
                    android:id="@+id/signUp_email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/skin_border"
                    android:drawableStart="@drawable/ic_mail"
                    android:drawablePadding="8dp"
                    android:hint="@string/email"
                    android:padding="8dp"
                    android:textColor="@color/purple" />

                <EditText
                    android:id="@+id/signUp_phone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/skin_border"
                    android:drawableStart="@drawable/baseline_call_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:padding="8dp"
                    android:textColor="@color/purple" />

                <EditText
                    android:id="@+id/signUp_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/skin_border"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawableEnd="@drawable/ic_eye_hidden"
                    android:drawablePadding="8dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textColor="@color/purple" />

                <EditText
                    android:id="@+id/signUp_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/skin_border"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawableEnd="@drawable/ic_eye_hidden"
                    android:drawablePadding="8dp"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textColor="@color/purple" />

                <Button
                    android:id="@+id/btnSignIn"
                    android:layout_width="188dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/skin"
                    android:text="@string/sign_up_btn"
                    android:textColor="@color/purple"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/alreadyUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:padding="8dp"
                    android:text="@string/already_an_user_login"
                    android:textColor="@color/skin"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="------ OR ------"
                    android:textColor="@color/skin"
                    android:textSize="16sp" />

                <!-- "Sign in with" text -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/sign_in_with"
                    android:textColor="@color/purple"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <!-- Phone and Email Buttons -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <Button
                        android:id="@+id/btnPhone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/skin"
                        android:text="@string/phone"
                        android:textColor="@color/purple"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="8dp"
                        android:layout_height="match_parent" />

                    <Button
                        android:id="@+id/btnEmail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/skin"
                        android:text="@string/email"
                        android:textColor="@color/purple"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

        </ScrollView>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
