<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/back3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    android:src="@drawable/baseline_arrow_back_ios_24"
    tools:context=".Screen.SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="16dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/baseline_arrow_back_ios_24" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="424dp"
            android:layout_gravity="center"
            android:background="@drawable/skin_border"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_btn"
                android:textAlignment="center"
                android:textColor="@color/skin"
                android:textSize="34sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/signIn_userName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/skin_border"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="8dp"
                android:hint="@string/user_name"
                android:padding="8dp"
                android:textColor="@color/purple"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/signIn_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/skin_border"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:padding="8dp"
                android:textColor="@color/purple"
                tools:ignore="TextFields" />

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:text="@string/forgot_password"
                android:textColor="@color/skin"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/signIn_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/skin"
                android:text="@string/sign_in_btn"
                android:textColor="@color/purple"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/notRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:text="@string/not_yet_signup_register"
                android:textColor="@color/skin"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>



</LinearLayout>