<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/back3"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background1"
    tools:context=".Screen.ChooseOne">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="265dp"
        android:layout_height="330dp"
        android:background="@drawable/purple_background"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <TextView
            android:id="@+id/textView"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/select_category"
            android:textSize="18sp"
            android:textStyle="bold" />

        <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="20dp">

        <ImageButton
            android:id="@+id/customer_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_selector"
            android:contentDescription="@string/customer" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/customer"
            android:textColor="@color/text_color_selector"
            android:textSize="16sp"
            android:textStyle="bold" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="20dp">

        <ImageButton
            android:id="@+id/chef_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_selector"
            android:contentDescription="@string/chef" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/chef"
            android:textColor="@color/text_color_selector"
            android:textSize="16sp"
            android:textStyle="bold" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="20dp">

        <ImageButton
            android:id="@+id/consultant_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_selector"
            android:contentDescription="@string/consultant" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/consultant"
            android:textColor="@color/text_color_selector"
            android:textSize="16sp"
            android:textStyle="bold" />
    </FrameLayout>



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>